# machine-learning

./: .gitignore  Dockerfile  docker-compose.yaml  prefect.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
api/: main.py
api/routers/: __init__.py  group_board.py  new_user.py  recommendation.py
config/: group_board_config.py  mysql_config.py  opensearch_config.py  opensearch_mappings.py
flows/: group_baord_flow.py  group_board_flow.py  leader_gauge.py  product_flow.py
gauge/core/: data_loader.py  gauge_service.py
gauge/managers/: db_manager.py
groupboard/core/: popularity_engine.py  recommendation_engine.py
groupboard/processor/: data_processor.py  location_processor.py
groupboard/service/: group_recommendation_service.py
groupboard/transformer/: response_transformer.py
product/core/: category_recommender.py  faiss_fallback.py  recommendation_engine.py
product/embedding/: embedding_generator.py  faiss_manager.py
product/feature/: behavior_booster.py  single_household_score.py  user_profile.py
product/processor/: category_pool.py  category_processor.py  data_processor.py  product_score_processor.py  recommendation_data.py  recommendation_history.py
product/repository/: recommendation_repository.py
product/service/: category_recommender.py  emergency_recommender.py  faiss_fallback.py  new_user_recommendation_service.py  recommendation_saver.py  recommendation_service.py
product/transformer/: recommendation_transformer.py
recommendation/api/: main.py  recommendation_api.py
test/db/: test_mysql.py
(+35 files in other folders)
