[project]
name = "machine-learning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dvc[all]>=3.60.0",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "graphviz>=0.20.3",
    "implicit>=0.7.2",
    "lightfm>=1.17.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.1",
    "mlxtend>=0.23.4",
    "nbformat>=4.2.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "opensearch-py>=3.0.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pingouin>=0.5.5",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-surprise>=1.1.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "sentence-transformers>=4.1.0",
    "statsmodels>=0.14.4",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
lightfm = { git = "https://github.com/daviddavo/lightfm" }
